# CoN_Economy_Simulation

./: README.md  calculations.py  initiation.py  nations_and_cities.py  pyproject.toml  test_initiation.py  test_nations_and_cities.py
data/: buildings.csv  population_growth.csv  read me
src/cakeulator/: __init__.py
src/cakeulator/data/: buildings.csv  population_growth.csv
src/cakeulator/economy_only/: city.py  main.py
src/cakeulator/utilities/: calculations.py
